# cu-library

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: lib.rs
src/access/: array_u64_10.rs  array_u8_32.rs  mod.rs  vec_u64_10.rs  vec_u8_32.rs
src/account_info/: account_borrows.rs  account_checks.rs  account_data.rs  account_key.rs  account_owner.rs  account_ownership.rs  account_realloc.rs  mod.rs
src/array/: array_assign.rs  array_new.rs  array_with_capacity.rs  mod.rs
src/array_vec/: vec_new.rs  vec_push.rs  vec_with_capacity.rs
src/arrayvec/: vec_new.rs  vec_push.rs  vec_with_capacity.rs
src/checked_math/: checked_add.rs  checked_div.rs  checked_mul.rs  checked_sub.rs
src/collections/: mod.rs
src/collections/array/: array_assign.rs  array_with_capacity.rs  mod.rs
src/collections/arrayvec/: access.rs  mod.rs  vec_new.rs  vec_push.rs  vec_with_capacity.rs
src/collections/heapless/: access.rs  mod.rs  vec_new.rs  vec_push.rs  vec_with_capacity.rs
src/collections/smallvec/: access.rs  vec_new.rs  vec_push.rs  vec_with_capacity.rs
src/collections/tinyvec/: access.rs  vec_new.rs  vec_push.rs  vec_with_capacity.rs
src/collections/tinyvec_heap/: mod.rs  vec_new.rs  vec_push.rs
src/collections/vec/: mod.rs  vec_new.rs  vec_push.rs  vec_u64_10.rs  vec_u8_32.rs
src/conversions/: cast_u16.rs  cast_u32.rs  cast_u64.rs  cast_u8.rs  from_usize.rs  mod.rs  slice_to_array.rs  to_usize.rs
src/cpi/: cpi_array_loop.rs  cpi_arrays.rs  cpi_arrayvec.rs  mod.rs
src/instructions/: discriminator.rs  mod.rs  process_instruction_0_99.rs  process_instruction_100_199.rs  process_instruction_200_299.rs  process_instruction_300_399.rs
src/math/: mod.rs
src/math/checked_math/: checked_mul.rs  checked_sub.rs  mod.rs
src/math/std_math/: std_add.rs  std_mul.rs  std_sub.rs
src/option/: mod.rs  option_checked_add.rs  option_if_let.rs  option_pubkey_ref.rs  option_slice_get.rs
src/partial_eq/: mod.rs  partial_eq_arrays.rs  partial_eq_neq.rs  partial_eq_primitives.rs
src/pinocchio_crates/: mod.rs  sysvar_rent.rs
src/pinocchio_crates/account_info/: account_key.rs  account_owner.rs
src/pinocchio_crates/account_meta/: array_loop.rs  mod.rs
src/pinocchio_ops/: mod.rs  msg.rs  sysvar_clock.rs  sysvar_rent.rs
src/saturating_math/: mod.rs  saturating_add.rs  saturating_mul.rs  saturating_sub.rs
src/serialization/: compressed_account_info.rs  mod.rs
src/solana_crates/: mod.rs  msg_program_id.rs  pubkey_to_bytes.rs  seed_references.rs
src/solana_ops/: mod.rs  msg.rs  msg_program_id.rs  pubkey_new_from_array.rs  pubkey_to_bytes.rs
src/std_math/: add_assign.rs  mod.rs  std_add.rs  std_div.rs  std_mul.rs  std_sub.rs  sub_assign.rs
src/vec/: mod.rs  vec_new.rs  vec_push.rs  vec_with_capacity.rs
tests/: bench.rs
