[package]
name = "cu-library"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
profile-program = []
default = ["profile-program", "custom-heap"]
custom-heap = []

[dependencies]
pinocchio = "0.9.1"
solana-msg = "2.2.1"
solana-pubkey = "2.2.1"
arrayvec = { version = "0.7"}
light-program-profiler = {git = "https://github.com/Lightprotocol/light-program-profiler" ,features = ["profile-program", "inline"] }
wincode = "0.1"
wincode-derive = "0.1"
serde = { version = "1.0", features = ["derive"] }
borsh = "0.10.4"
zerocopy = { version = "0.8.25", features = [  "derive"] }
light-zero-copy = { version= "0.4", features = [ "mut", "std", "derive"] }
# git = "https://github.com/Lightprotocol/light-program-profiler",
[dev-dependencies]
litesvm = "0.6.1"
solana-sdk = "2.2.1"
solana-program = "2.2.1"
solana-transaction = "2.2.1"
solana-message = "2.2.1"
solana-pubkey = "2.2.1"
solana-keypair = "2.2.1"
solana-signer = "2.2.1"
solana-instruction = "2.2.1"
solana-account = "2.2.1"

[lib]
crate-type = ["cdylib", "lib"]


[patch.crates-io]
# Profiling logs and state is handled here
solana-program-runtime = { git = "https://github.com/Lightprotocol/agave", rev = "580e29f03e4176a4a5525abc188a948c6595c47f" }
# Profiling syscalls are defined here
solana-bpf-loader-program = { git = "https://github.com/Lightprotocol/agave", rev = "580e29f03e4176a4a5525abc188a948c6595c47f" }
# Patch solana-program-memory to use older version where is_nonoverlapping is public
solana-program-memory = { git = "https://github.com/anza-xyz/solana-sdk", rev = "1c1d667f161666f12f5a43ebef8eda9470a8c6ee" }

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint"))',
]
